--- a/src/RecipeHub.Web/src/pages/RecipeListPage.module.css
+++ b/src/RecipeHub.Web/src/pages/RecipeListPage.module.css
@@ -24,7 +24,7 @@
 }
 
 .description {
-  color: #444;
+  color: #2a2a2a;
   font-size: 0.9rem;
   line-height: 1.4;
   display: -webkit-box;
@@ -42,7 +42,7 @@
 }
 
 .meta {
-  color: #666;
+  color: #4a4a4a;
   font-size: 0.85rem;
   display: flex;
   justify-content: space-between;
@@ -52,7 +52,7 @@
 .error {
   padding: 2rem;
   text-align: center;
-  color: #666;
+  color: #4a4a4a;
 }
 
 .error {
